# panl

./: .flake8  .readthedocs.yaml  LICENSE  README.md  check_mat.py  codecov.yml  nasa_531.py  noxfile.py  pyproject.toml  visualize_debug.py
.github/: WORKFLOW_SETUP.md
.github/workflows/: release.yml  tests.yml
docs/: boundary_conditions.rst  conf.py  examples.rst  implementation.rst  index.rst  requirements.txt  theory.rst  validation.rst  walkthrough.md
docs/examples/: isotropic_plate.py
scripts/: debug_bem.py  nasa_531.py  uniaxial_example.py
scripts/validation_study/: peterson_validation.py
src/panelyze/analysis/: __init__.py  geometry.py  kernels.py  material.py  plotting.py  postproc.py  solver.py
tests/: test_nasa_5_3_1.py  test_plotting.py  test_scf_isotropic.py  test_solver_features.py
